# xcx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/xcx/: setup.h  setup.hpp  tools.hpp  vendor.hpp
src/: main.cpp  setup.cpp  tools.cpp  vendor.cpp
